--- a/gb/20/11/25/n12574482.md
+++ b/gb/20/11/25/n12574482.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yexsyy329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yexsyy329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yexsyy329/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yexsyy329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yexsyy329/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>沈荣津：掌握技术、补缺口、扩大市场 力挺5G发展在地化</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年11月25日讯】（大纪元记者李怡欣台湾台北报导）台行政院副院长<ahref="https://github.com/yexsyy329/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>25日出席“2020创新论坛”5G启动 产业智慧转型活动开幕致词表示，行政院推动数位国家计划，将组改成立数位发展部，政府透过“掌握技术、补缺口、扩大市场，支持5G发展在地化。</p>
-<p><ahref="https://github.com/yexsyy329/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>表示，行政院因应数位科技，推动数位发展部，建立跨部会协作平台，大家可在平台上数位转型应用，制造业工业4.0智慧工厂、商务服务业智慧商业、交通部智慧交通、卫福部智慧医疗等，都能在这平台上应用，寻找解决方案。</p>
+<p>【大纪元2020年11月25日讯】（大纪元记者李怡欣台湾台北报导）台行政院副院长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>25日出席“2020创新论坛”5G启动 产业智慧转型活动开幕致词表示，行政院推动数位国家计划，将组改成立数位发展部，政府透过“掌握技术、补缺口、扩大市场，支持5G发展在地化。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>表示，行政院因应数位科技，推动数位发展部，建立跨部会协作平台，大家可在平台上数位转型应用，制造业工业4.0智慧工厂、商务服务业智慧商业、交通部智慧交通、卫福部智慧医疗等，都能在这平台上应用，寻找解决方案。</p>
 <p>沈荣津指出，今年经济成长连续三季排名亚洲四小龙第一，唯一正成长，启动投资台湾三大方案，已有724家厂商回台投资1.14兆，促进9.6万人就业，借此机会鼓励智慧化、自动化、数位化以及5G科技产品生产、营运，为台湾发展5G科技创新应用创造有利机会。</p>
 <p>沈荣津说，例如高阶制造中心，高阶服务器移回来台湾，半导体先进制程中心，台积电南科3奈米厂超前部署。“高阶制造中心、半导体先进制程中心、高科技研发中心以及绿能发展中心，这四大中心奠定台湾未来20经济荣景”。</p>
 <p>沈荣津表示，政府支持5G发展在地化，透过“掌握技术、补缺口、扩大市场，优先采用国产应用方案，未来整厂输出国际。</p>
@@ -17,48 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/7/13/n12252591.md#1">沈荣津、王美花、陈时中出席北车 三倍券吃糕点做公益活动</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/7/20/n12269939.md#1">蔡英文主持 沈荣津、萧美琴宣誓就职</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/8/28/n12364043.md#1">“数位国力”  沈荣津:中部企业要投资人才</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/10/28/n12508664.md#1">离岸风电带动商机 沈荣津：一兼两顾</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/2/n12520284.md#1">5G还是4G LTE网 如何使iPhone 12获最快速度</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/4/n12525065.md#1">台商总投资1.1兆元 沈荣津：补平产业空洞化</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/17/n12556840.md#1">加联邦保守党促政府30天决定华为5G命运</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/19/n12560655.md#1">谢田：美国更接近跳过5G直奔6G</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12569487.md#1">龙华科大成立人才培育基地 对焦5G产业需求</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12570343.md#1">研科5G明年推出 将完全摆脱华为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/13/n12252591.md#1">沈荣津、王美花、陈时中出席北车 三倍券吃糕点做公益活动</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/20/n12269939.md#1">蔡英文主持 沈荣津、萧美琴宣誓就职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/28/n12364043.md#1">“数位国力”  沈荣津:中部企业要投资人才</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/28/n12508664.md#1">离岸风电带动商机 沈荣津：一兼两顾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/2/n12520284.md#1">5G还是4G LTE网 如何使iPhone 12获最快速度</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/4/n12525065.md#1">台商总投资1.1兆元 沈荣津：补平产业空洞化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/17/n12556840.md#1">加联邦保守党促政府30天决定华为5G命运</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/19/n12560655.md#1">谢田：美国更接近跳过5G直奔6G</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/23/n12569487.md#1">龙华科大成立人才培育基地 对焦5G产业需求</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/23/n12570343.md#1">研科5G明年推出 将完全摆脱华为</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/yexsyy329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/5/n10617345.md#1" target="_blank">婆媳恩怨千千结 一本宝书解枷锁</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/20/n12564664.md#1">《狮子王》复仇记：王位之争即正邪大战</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12572207.md#1">【新闻大家谈】拜登过渡 川普胜算几何？</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/25/n12573524.md#1">【拍案惊奇】阻川普连任 揭秘全球大重构计划</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12572484.md#1">【重播】川普和夫人举行感恩节火鸡赦免仪式</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568283.md#1">朱利安尼发声明：鲍威尔不是川普团队律师</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568733.md#1">田云：普京不承认拜登当选 点明三个要害</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12569578.md#1">【新闻大家谈】鲍威尔独立 川普变阵 大戏开演</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/22/n12567936.md#1">54岁刘嘉玲饰20多岁女生 扎双马尾造型引热议</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/22/n12567816.md#1">孟美岐搭机找不到座位 原来是私生饭做了手脚</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12570274.md#1">曾获叶德娴帮还巨债 刘德华承诺养她一辈子</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12572570.md#1">疑踩中共禁区 张艺谋《一秒钟》遭金鸡奖撤映</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12570674.md#1">被误认嚼口香糖耍大牌 范丞丞曝光真相引爆笑</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/18/n12557602.md#1">10秒找到东西 丰田汽车高效率 违规恐挨骂</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12571000.md#1">大火中救4人 俄罗斯怀孕母狗自己却被烧伤</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12571675.md#1">解密画面：美军F-35战机试投B61-12核弹</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568624.md#1">美国7旬老翁跳入水中 扳开鳄鱼嘴巴救小狗</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568927.md#1">马斯克：火星地球化前 移民先住玻璃圆顶内</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yexsyy329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yexsyy329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/25/n12574482.htm">沈荣津：掌握技术、补缺口、扩大市场 力挺5G发展在地化</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/25/n12574482.htm">沈荣津：掌握技术、补缺口、扩大市场 力挺5G发展在地化</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yexsyy329/djy/blob/master/gb/20/11/25/n12574482.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yexsyy329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yexsyy329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yexsyy329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/11/25/n12574482.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
